--- a/css/style.css
+++ b/css/style.css
@@ -644,11 +644,24 @@ th {
 
 /*Usamos el elemento linear-gradient para dar un mejor aspecto a la web implementandolo en el background*/
 .mapa {
+    display: flex;
     width: 100%;
     height: 100%;
+    text-align: center;
     margin: 0 auto;
     padding: 3em 0;
     background: linear-gradient(#BBBBBB, #181616);
+    flex-direction: column;
+    align-items: center;
+}
+
+.mapa input {
+    text-align: center;
+    width: 25%;
+}
+
+.mapa button {
+    width: 8%;
 }
 
 .mapa p {
@@ -656,17 +669,23 @@ th {
     text-align: center;
 }
 
-.mapa-contenido {
-    width: 100%;
-    margin: 10 auto;
-}
 
-.mapa .frame {
+.frame {
     margin: 2rem 2rem;
     width: 90%;
+    height: 500px;
+    border: 0;
 }
 
+.contact-info {
+    text-align: center;
+}
 
+.contact-info h3,
+.contact-info p {
+    color: white;
+    margin: 5px 0;
+}
 
 /*media queries for web responsive*/
 @media screen and (max-width: 820px) {
@@ -844,11 +863,13 @@ th {
     .contenido .images {
         height: 100%;
         width: 100%;
+        margin: 20px 0;
     }
 
     .contenido .images img {
         height: 100%;
         width: 100%;
+        margin: 20px 0;
     }
 
     #formularioF {
