--- a/views/contacto.html
+++ b/views/contacto.html
@@ -1,97 +1,94 @@
 <!DOCTYPE html>
-
 <html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <title>Produtos - Barbería ByAlex</title>
+    <title>Contacto - Barbería ByAlex</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <!-- link iconos CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-</head>
-<!-- Iniciamos con la barra de navegación-->
-<header>
-    <div class="caja">
-        <a href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></a>
-        <nav>
-            <ul>
-                <li>
-                    <a href=" ../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="productos.html">Productos</a>
-                </li>
-                <li>
-                    <a href="presupuesto.html">Contacto</a>
-                </li>
-                <li><a id="selected" href="contacto.html">Ubicación</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
-<!-- Agregamos el mapa de nuestra ubicación-->
-<section class="mapa">
-    <h3 class="titulo-principal">Nuestra Ubicación</h3>
-    <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
-    <p>Ingresa al mapa dando click <a
-            href="https://www.google.com/maps/place/Academia+Oposiciones+y+Cursos+%7C+MasterD+Madrid/@40.4412286,-3.7000116,17z/data=!3m1!4b1!4m6!3m5!1s0xd4228f0d66f20dd:0xd2f315a5e7718fbe!8m2!3d40.4412286!4d-3.6974367!16s%2Fg%2F11xc65x3q?entry=ttu">AQUÍ</a>
-    </p>
-    <div>
-        <iframe class="frame"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5379712842723!2d-3.700011624131069!3d40.44122857143564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228f0d66f20dd%3A0xd2f315a5e7718fbe!2sAcademia%20Oposiciones%20y%20Cursos%20%7C%20MasterD%20Madrid!5e0!3m2!1ses!2ses!4v1705861032280!5m2!1ses!2ses"
-            width="560" height="500" style="border: 0" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-</section>
-<!--Implementamos el pie de página-->
-<footer class="footer" id="contact">
-    <div class="box-container">
-        <div class="content">
-            <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
-            <h1 class="logoName">ByAlex BarberShop</h1>
-        </div>
-        <div class="box">
-            <h3>Quick link</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-            <h3>Extra link</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-            <h3>Contact Info</h3>
-            <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-            <a href="#">
-                <i class="fas fa-envelope"></i>ByAlex@gmail.com</a>
-            <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
-                <i class="fa-regular fa-map"></i>Ubicación:
-                Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+    <style>
+        /* Estilos adicionales para el mapa y formulario */
+    </style>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YElSWC2pBGqdmXT3AnEoKrOxEy3ekdQ&callback=iniciarMap"></script>
 
+    <script src="../js/contacto.js"></script>
+</head>
+
+<body>
+    <!-- Iniciamos con la barra de navegación-->
+    <header>
+        <div class="caja">
+            <a href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
+                    class="logo"></a>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="presupuesto.html">Contacto</a></li>
+                    <li><a id="selected" href="contacto.html">Ubicación</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
-    <div class="share">
-        <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
-        <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
-        <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
-    </div>
-    <div class="credit">
-        © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
-    </div>
-</footer>
+    </header>
+
+    <!-- Agregamos el mapa de nuestra ubicación-->
+        <section class="mapa">
+            <h3 class="titulo-principal">Nuestra Ubicación</h3>
+            <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
+            <p>Ingresa tu dirección para calcular la ruta a nuestra barbería:</p>
+            <input type="text" id="start" placeholder="Ingresa tu dirección">
+            <button id="routeBtn">Calcular Ruta</button>
+            <div id="map" class="frame"></div>
+        </section>
+
+    <!-- Implementamos el pie de página -->
+    <footer class="footer" id="contact">
+        <div class="box-container">
+            <div class="content">
+                <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
+                <h1 class="logoName">ByAlex BarberShop</h1>
+            </div>
+            <div class="box">
+                <h3>Quick link</h3>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Home</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Product</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Blogs</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Review</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Contact</a>
+            </div>
+            <div class="box">
+                <h3>Extra link</h3>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Home</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Product</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Blogs</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Review</a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> Contact</a>
+            </div>
+            <div class="box">
+                <h3>Contact Info</h3>
+                <a href="#"> <i class="fas fa-phone"></i> +34 641909677</a>
+                <a href="#"> <i class="fas fa-envelope"></i> ByAlex@gmail.com</a>
+                <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+                    <i class="fa-regular fa-map"></i> Ubicación:
+                    Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+            </div>
+        </div>
+        <div class="share">
+            <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+            <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+            <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+            <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+            <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
+        </div>
+        <div class="credit">
+            © Created by <span>Mr. ByAlex Designer</span> | Todos los derechos reservados!
+        </div>
+    </footer>
 </body>
 
 </html>
