--- a/views/productos.html
+++ b/views/productos.html
@@ -79,13 +79,13 @@
 
   <h2 class="titulo-principal">Galería Barbería ByAlex</h2>
   <div class="container">
-    <div class="img"></div>
-    <div class="img"></div>
-    <div class="img"></div>
-    <div class="img"></div>
-    <div class="img"></div>
-    <div class="img"></div>
-    <div class="img"></div>
+    <div class="img-grid"></div>
+    <div class="img-grid"></div>
+    <div class="img-grid"></div>
+    <div class="img-grid"></div>
+    <div class="img-grid"></div>
+    <div class="img-grid"></div>
+    <div class="img-grid"></div>
   </div>
 
 </main>
