--- a/views/productos.html
+++ b/views/productos.html
@@ -64,7 +64,7 @@
   </ul>
 
   <h2 class="titulo-principal">Extras</h2>
-  <section>
+  <section class="sectionGrid">
     <div class="contenido">
       <div class="images">
         <img class="galeria" src="../imagenes/barba1.jpg">
