--- a/views/productos.html
+++ b/views/productos.html
@@ -67,12 +67,12 @@
   <section class="sectionGrid">
     <div class="contenido">
       <div class="images">
-        <img class="galeria" src="../imagenes/barba1.jpg">
-        <img class="galeria" src="../imagenes/barba2.jpg">
-        <img class="galeria" src="../imagenes/extras1.jpg">
-        <img class="galeria" src="../imagenes/extras2.jpg">
-        <img class="galeria" src="../imagenes/masaje1.jpg">
-        <img class="galeria" src="../imagenes/masaje2.jpg">
+        <img class="galeria" src="../imagenes/barba1.jpg" alt="barba1">
+        <img class="galeria" src="../imagenes/barba2.jpg" alt="barba2">
+        <img class="galeria" src="../imagenes/extras1.jpg" alt="extras1">
+        <img class="galeria" src="../imagenes/extras2.jpg" alt="extras2">
+        <img class="galeria" src="../imagenes/masaje1.jpg" alt="masaje1">
+        <img class="galeria" src="../imagenes/masaje2.jpg" alt="masaje2">
       </div>
     </div>
   </section>
@@ -134,9 +134,10 @@
     © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
   </div>
 </footer>
+<scripts rc="../js/slider.js">
+  </script>
+  </body>
 
-</body>
 
-<script src="../js/slider.js"></script>
 
 </html>
