--- a/views/productos.html
+++ b/views/productos.html
@@ -134,7 +134,7 @@
     © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
   </div>
 </footer>
-<scripts rc="../js/slider.js">
+<scripts src="../js/slider.js">
   </script>
   </body>
 
