--- a/views/productos.html
+++ b/views/productos.html
@@ -134,10 +134,7 @@
     © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
   </div>
 </footer>
-<scripts src="../js/slider.js">
-  </script>
-  </body>
-
-
+</body>
+<script src="../js/slider.js"></script>
 
 </html>
