--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -36,7 +36,7 @@
     <main class="main-contacto">
 
       <form id="form" name="form" method="post" action="procesar.php">
-        <fieldset id="formularioF">
+        <fieldset class="formularioF">
           <legend class="titulo-form">Datos Personales</legend>
           <div>
             <label for="nombre">Nombre</label>
@@ -65,7 +65,7 @@
 
 
 
-        <fieldset id="formularioF">
+        <fieldset class="formularioF">
           <legend class="titulo-form">Presupuesto</legend>
           <div>
             <label>Elije un producto</label>
@@ -111,7 +111,7 @@
 
 
 
-        <fieldset id="formularioF">
+        <fieldset class="formularioF">
           <legend class="titulo-form">Aceptación condiciones y envio de presupuesto </legend>
           <fieldset>
             <legend>¿Cómo le gustaría que lo contactemos?</legend>
@@ -171,9 +171,13 @@
                   <td>08h ~ 20h</td>
                 </tr>
           </div>
-          </tbody>
-          </table>
+        </fieldset>
+      </form>
     </main>
+  </div>
+  </tbody>
+  </table>
+  </main>
   </div>
   <!-- El pie de pagina -->
   <footer class="footer" id="contact">
