--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -157,7 +157,7 @@
                   <th>Horario</th>
                 </tr>
               </thead>
-              <tbody>
+              <div>
                 <tr>
                   <td>Lunes</td>
                   <td>08h ~ 20h</td>
@@ -170,6 +170,7 @@
                   <td>Viernes</td>
                   <td>08h ~ 20h</td>
                 </tr>
+              </div>
           </div>
         </fieldset>
       </form>
