--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -150,7 +150,7 @@
             <input type="reset" value="Borrar" id="borrar">
           </div>
           <div>
-            <table class="table">
+            <div class="table">
               <thead>
                 <tr>
                   <th>Día</th>
@@ -171,6 +171,7 @@
                   <td>08h ~ 20h</td>
                 </tr>
               </div>
+            </div>
           </div>
         </fieldset>
       </form>
